BitLanguageParser.java
// $ANTLR 3.5.2 E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g 2015-08-21 16:59:44

	package bitwars;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class BitLanguageParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADDEXP", "ADDOP", "COMPSMTM", 
		"DECL", "DECLSTMT", "EXP", "EXPSTMT", "FACTOR", "ID", "IFSTMT", "MULOP", 
		"NUM", "PROG", "RELOP", "RETURNSTMT", "REWORD", "SIMEXP", "STMT", "STMTLIST", 
		"TERM", "VAR", "WHILESTMT", "WS", "'!='", "'%'", "'&&'", "'('", "')'", 
		"'*'", "'+'", "','", "'-'", "'/'", "';'", "'<'", "'<='", "'='", "'=='", 
		"'>'", "'>='", "'RANDOM'", "'['", "']'", "'else'", "'if'", "'int'", "'return'", 
		"'while'", "'{'", "'||'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int ADDEXP=4;
	public static final int ADDOP=5;
	public static final int COMPSMTM=6;
	public static final int DECL=7;
	public static final int DECLSTMT=8;
	public static final int EXP=9;
	public static final int EXPSTMT=10;
	public static final int FACTOR=11;
	public static final int ID=12;
	public static final int IFSTMT=13;
	public static final int MULOP=14;
	public static final int NUM=15;
	public static final int PROG=16;
	public static final int RELOP=17;
	public static final int RETURNSTMT=18;
	public static final int REWORD=19;
	public static final int SIMEXP=20;
	public static final int STMT=21;
	public static final int STMTLIST=22;
	public static final int TERM=23;
	public static final int VAR=24;
	public static final int WHILESTMT=25;
	public static final int WS=26;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public BitLanguageParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public BitLanguageParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return BitLanguageParser.tokenNames; }
	@Override public String getGrammarFileName() { return "E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g"; }


	public static class program_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "program"
	// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:23:1: program : statement_list -> ^( PROG statement_list ) ;
	public final BitLanguageParser.program_return program() throws RecognitionException {
		BitLanguageParser.program_return retval = new BitLanguageParser.program_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope statement_list1 =null;

		RewriteRuleSubtreeStream stream_statement_list=new RewriteRuleSubtreeStream(adaptor,"rule statement_list");

		try {
			// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:23:9: ( statement_list -> ^( PROG statement_list ) )
			// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:24:1: statement_list
			{
			pushFollow(FOLLOW_statement_list_in_program95);
			statement_list1=statement_list();
			state._fsp--;

			stream_statement_list.add(statement_list1.getTree());
			// AST REWRITE
			// elements: statement_list
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 24:16: -> ^( PROG statement_list )
			{
				// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:24:18: ^( PROG statement_list )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PROG, "PROG"), root_1);
				adaptor.addChild(root_1, stream_statement_list.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {

				throw re;

		}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class statement_list_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "statement_list"
	// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:28:1: statement_list : ( statement )+ -> ^( STMTLIST ( statement )+ ) ;
	public final BitLanguageParser.statement_list_return statement_list() throws RecognitionException {
		BitLanguageParser.statement_list_return retval = new BitLanguageParser.statement_list_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope statement2 =null;

		RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");

		try {
			// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:28:16: ( ( statement )+ -> ^( STMTLIST ( statement )+ ) )
			// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:29:1: ( statement )+
			{
			// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:29:1: ( statement )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==ID||(LA1_0 >= 48 && LA1_0 <= 52)) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:29:1: statement
					{
					pushFollow(FOLLOW_statement_in_statement_list114);
					statement2=statement();
					state._fsp--;

					stream_statement.add(statement2.getTree());
					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			// AST REWRITE
			// elements: statement
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 29:12: -> ^( STMTLIST ( statement )+ )
			{
				// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:29:14: ^( STMTLIST ( statement )+ )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(STMTLIST, "STMTLIST"), root_1);
				if ( !(stream_statement.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_statement.hasNext() ) {
					adaptor.addChild(root_1, stream_statement.nextTree());
				}
				stream_statement.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {

				throw re;

		}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "statement_list"


	public static class statement_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "statement"
	// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:33:1: statement : ( declaration_stmt -> ^( STMT declaration_stmt ) | expression_stmt -> ^( STMT expression_stmt ) | compound_stmt -> ^( STMT compound_stmt ) | if_stmt -> ^( STMT if_stmt ) | iteration_stmt -> ^( STMT iteration_stmt ) | return_stmt -> ^( STMT return_stmt ) );
	public final BitLanguageParser.statement_return statement() throws RecognitionException {
		BitLanguageParser.statement_return retval = new BitLanguageParser.statement_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope declaration_stmt3 =null;
		ParserRuleReturnScope expression_stmt4 =null;
		ParserRuleReturnScope compound_stmt5 =null;
		ParserRuleReturnScope if_stmt6 =null;
		ParserRuleReturnScope iteration_stmt7 =null;
		ParserRuleReturnScope return_stmt8 =null;

		RewriteRuleSubtreeStream stream_iteration_stmt=new RewriteRuleSubtreeStream(adaptor,"rule iteration_stmt");
		RewriteRuleSubtreeStream stream_return_stmt=new RewriteRuleSubtreeStream(adaptor,"rule return_stmt");
		RewriteRuleSubtreeStream stream_declaration_stmt=new RewriteRuleSubtreeStream(adaptor,"rule declaration_stmt");
		RewriteRuleSubtreeStream stream_if_stmt=new RewriteRuleSubtreeStream(adaptor,"rule if_stmt");
		RewriteRuleSubtreeStream stream_compound_stmt=new RewriteRuleSubtreeStream(adaptor,"rule compound_stmt");
		RewriteRuleSubtreeStream stream_expression_stmt=new RewriteRuleSubtreeStream(adaptor,"rule expression_stmt");

		try {
			// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:33:11: ( declaration_stmt -> ^( STMT declaration_stmt ) | expression_stmt -> ^( STMT expression_stmt ) | compound_stmt -> ^( STMT compound_stmt ) | if_stmt -> ^( STMT if_stmt ) | iteration_stmt -> ^( STMT iteration_stmt ) | return_stmt -> ^( STMT return_stmt ) )
			int alt2=6;
			switch ( input.LA(1) ) {
			case 49:
				{
				alt2=1;
				}
				break;
			case ID:
				{
				alt2=2;
				}
				break;
			case 52:
				{
				alt2=3;
				}
				break;
			case 48:
				{
				alt2=4;
				}
				break;
			case 51:
				{
				alt2=5;
				}
				break;
			case 50:
				{
				alt2=6;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:34:1: declaration_stmt
					{
					pushFollow(FOLLOW_declaration_stmt_in_statement135);
					declaration_stmt3=declaration_stmt();
					state._fsp--;

					stream_declaration_stmt.add(declaration_stmt3.getTree());
					// AST REWRITE
					// elements: declaration_stmt
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 34:18: -> ^( STMT declaration_stmt )
					{
						// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:34:20: ^( STMT declaration_stmt )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(STMT, "STMT"), root_1);
						adaptor.addChild(root_1, stream_declaration_stmt.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;
				case 2 :
					// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:35:3: expression_stmt
					{
					pushFollow(FOLLOW_expression_stmt_in_statement146);
					expression_stmt4=expression_stmt();
					state._fsp--;

					stream_expression_stmt.add(expression_stmt4.getTree());
					// AST REWRITE
					// elements: expression_stmt
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 35:19: -> ^( STMT expression_stmt )
					{
						// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:35:21: ^( STMT expression_stmt )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(STMT, "STMT"), root_1);
						adaptor.addChild(root_1, stream_expression_stmt.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;
				case 3 :
					// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:36:3: compound_stmt
					{
					pushFollow(FOLLOW_compound_stmt_in_statement157);
					compound_stmt5=compound_stmt();
					state._fsp--;

					stream_compound_stmt.add(compound_stmt5.getTree());
					// AST REWRITE
					// elements: compound_stmt
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 36:17: -> ^( STMT compound_stmt )
					{
						// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:36:19: ^( STMT compound_stmt )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(STMT, "STMT"), root_1);
						adaptor.addChild(root_1, stream_compound_stmt.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;
				case 4 :
					// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:37:3: if_stmt
					{
					pushFollow(FOLLOW_if_stmt_in_statement168);
					if_stmt6=if_stmt();
					state._fsp--;

					stream_if_stmt.add(if_stmt6.getTree());
					// AST REWRITE
					// elements: if_stmt
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 37:11: -> ^( STMT if_stmt )
					{
						// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:37:13: ^( STMT if_stmt )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(STMT, "STMT"), root_1);
						adaptor.addChild(root_1, stream_if_stmt.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;
				case 5 :
					// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:38:3: iteration_stmt
					{
					pushFollow(FOLLOW_iteration_stmt_in_statement179);
					iteration_stmt7=iteration_stmt();
					state._fsp--;

					stream_iteration_stmt.add(iteration_stmt7.getTree());
					// AST REWRITE
					// elements: iteration_stmt
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 38:18: -> ^( STMT iteration_stmt )
					{
						// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:38:20: ^( STMT iteration_stmt )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(STMT, "STMT"), root_1);
						adaptor.addChild(root_1, stream_iteration_stmt.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;
				case 6 :
					// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:39:3: return_stmt
					{
					pushFollow(FOLLOW_return_stmt_in_statement190);
					return_stmt8=return_stmt();
					state._fsp--;

					stream_return_stmt.add(return_stmt8.getTree());
					// AST REWRITE
					// elements: return_stmt
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 39:15: -> ^( STMT return_stmt )
					{
						// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:39:17: ^( STMT return_stmt )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(STMT, "STMT"), root_1);
						adaptor.addChild(root_1, stream_return_stmt.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {

				throw re;

		}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "statement"


	public static class declaration_stmt_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "declaration_stmt"
	// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:43:1: declaration_stmt : ( declaration )+ -> ^( DECLSTMT ( declaration )+ ) ;
	public final BitLanguageParser.declaration_stmt_return declaration_stmt() throws RecognitionException {
		BitLanguageParser.declaration_stmt_return retval = new BitLanguageParser.declaration_stmt_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope declaration9 =null;

		RewriteRuleSubtreeStream stream_declaration=new RewriteRuleSubtreeStream(adaptor,"rule declaration");

		try {
			// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:43:18: ( ( declaration )+ -> ^( DECLSTMT ( declaration )+ ) )
			// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:44:1: ( declaration )+
			{
			// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:44:1: ( declaration )+
			int cnt3=0;
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==49) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:44:1: declaration
					{
					pushFollow(FOLLOW_declaration_in_declaration_stmt208);
					declaration9=declaration();
					state._fsp--;

					stream_declaration.add(declaration9.getTree());
					}
					break;

				default :
					if ( cnt3 >= 1 ) break loop3;
					EarlyExitException eee = new EarlyExitException(3, input);
					throw eee;
				}
				cnt3++;
			}

			// AST REWRITE
			// elements: declaration
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 44:15: -> ^( DECLSTMT ( declaration )+ )
			{
				// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:44:17: ^( DECLSTMT ( declaration )+ )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DECLSTMT, "DECLSTMT"), root_1);
				if ( !(stream_declaration.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_declaration.hasNext() ) {
					adaptor.addChild(root_1, stream_declaration.nextTree());
				}
				stream_declaration.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {

				throw re;

		}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declaration_stmt"


	public static class declaration_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "declaration"
	// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:48:1: declaration : ( 'int' ID ( '=' additive_expression )? ';' -> ^( DECL 'int' ID ( '=' additive_expression )? ';' ) | 'int' ID '[' NUM ']' ( '=' '{' ( additive_expression ',' )* '}' )? ';' -> ^( DECL 'int' ID '[' NUM ']' ( '=' '{' ( additive_expression ',' )* '}' )? ';' ) );
	public final BitLanguageParser.declaration_return declaration() throws RecognitionException {
		BitLanguageParser.declaration_return retval = new BitLanguageParser.declaration_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal10=null;
		Token ID11=null;
		Token char_literal12=null;
		Token char_literal14=null;
		Token string_literal15=null;
		Token ID16=null;
		Token char_literal17=null;
		Token NUM18=null;
		Token char_literal19=null;
		Token char_literal20=null;
		Token char_literal21=null;
		Token char_literal23=null;
		Token char_literal24=null;
		Token char_literal25=null;
		ParserRuleReturnScope additive_expression13 =null;
		ParserRuleReturnScope additive_expression22 =null;

		CommonTree string_literal10_tree=null;
		CommonTree ID11_tree=null;
		CommonTree char_literal12_tree=null;
		CommonTree char_literal14_tree=null;
		CommonTree string_literal15_tree=null;
		CommonTree ID16_tree=null;
		CommonTree char_literal17_tree=null;
		CommonTree NUM18_tree=null;
		CommonTree char_literal19_tree=null;
		CommonTree char_literal20_tree=null;
		CommonTree char_literal21_tree=null;
		CommonTree char_literal23_tree=null;
		CommonTree char_literal24_tree=null;
		CommonTree char_literal25_tree=null;
		RewriteRuleTokenStream stream_49=new RewriteRuleTokenStream(adaptor,"token 49");
		RewriteRuleTokenStream stream_45=new RewriteRuleTokenStream(adaptor,"token 45");
		RewriteRuleTokenStream stream_46=new RewriteRuleTokenStream(adaptor,"token 46");
		RewriteRuleTokenStream stream_40=new RewriteRuleTokenStream(adaptor,"token 40");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_52=new RewriteRuleTokenStream(adaptor,"token 52");
		RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
		RewriteRuleTokenStream stream_54=new RewriteRuleTokenStream(adaptor,"token 54");
		RewriteRuleTokenStream stream_NUM=new RewriteRuleTokenStream(adaptor,"token NUM");
		RewriteRuleTokenStream stream_37=new RewriteRuleTokenStream(adaptor,"token 37");
		RewriteRuleSubtreeStream stream_additive_expression=new RewriteRuleSubtreeStream(adaptor,"rule additive_expression");

		try {
			// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:48:13: ( 'int' ID ( '=' additive_expression )? ';' -> ^( DECL 'int' ID ( '=' additive_expression )? ';' ) | 'int' ID '[' NUM ']' ( '=' '{' ( additive_expression ',' )* '}' )? ';' -> ^( DECL 'int' ID '[' NUM ']' ( '=' '{' ( additive_expression ',' )* '}' )? ';' ) )
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==49) ) {
				int LA7_1 = input.LA(2);
				if ( (LA7_1==ID) ) {
					int LA7_2 = input.LA(3);
					if ( (LA7_2==45) ) {
						alt7=2;
					}
					else if ( (LA7_2==37||LA7_2==40) ) {
						alt7=1;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 7, 2, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 7, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				throw nvae;
			}

			switch (alt7) {
				case 1 :
					// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:49:1: 'int' ID ( '=' additive_expression )? ';'
					{
					string_literal10=(Token)match(input,49,FOLLOW_49_in_declaration230);  
					stream_49.add(string_literal10);

					ID11=(Token)match(input,ID,FOLLOW_ID_in_declaration231);  
					stream_ID.add(ID11);

					// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:49:8: ( '=' additive_expression )?
					int alt4=2;
					int LA4_0 = input.LA(1);
					if ( (LA4_0==40) ) {
						alt4=1;
					}
					switch (alt4) {
						case 1 :
							// E:\\资料\\学习资料\\大三\\编译原理项目\\antlr\\BitLanguage.g:49:9: '=' additive_expression
							{
							char_literal12=(Token)match(input,40,FOLLOW_40_in_declaration233);  
							stream_40.add(char_literal12);

							pushFollow(FOLLOW_additive_expression_in_declaration234);
							additive_expression13=additive_expression();
							state._fsp--;

							stream_additive_expression.add(additive_expression13.getTree());
							}
							break;

					}

					char_literal14=(Token)match(input,37,FOLLOW_37_in_declaration237);  
					stream_37.add(char_literal14);
